added money/wave time

--- a/shoot.html
+++ b/shoot.html
@@ -6,6 +6,10 @@
     <button type="button" id="towerOne">Tower One</button>
     <button type="button" id="towerTwo">Tower Two</button>
 
+    <b id="money">Money: $1000</b>
+    <b id="wave">Wave: 1</b>
+    <b id="nextWave">Next Wave In: 0</b>
+
     <style>
         #gameCanvas
         {
@@ -33,6 +37,24 @@
         {
             position: absolute;
             top: 98px;
+            left: 925px;
+        }
+        #money
+        {
+            position: absolute;
+            top: 128px;
+            left: 925px;
+        }
+        #wave
+        {
+            position: absolute;
+            top: 158px;
+            left: 925px;
+        }
+        #nextWave
+        {
+            position: absolute;
+            top: 188px;
             left: 925px;
         }
     </style>
