added lives and helper functions

--- a/shoot.html
+++ b/shoot.html
@@ -9,6 +9,7 @@
     <b id="money">Money: $1000</b>
     <b id="wave">Wave: 1</b>
     <b id="nextWave">Next Wave In: 0</b>
+    <b id="lives">Lives: 10</b>
 
     <style>
         #gameCanvas
@@ -55,6 +56,12 @@
         {
             position: absolute;
             top: 188px;
+            left: 925px;
+        }
+        #lives
+        {
+            position: absolute;
+            top: 218px;
             left: 925px;
         }
     </style>
