--- a/shoot.html
+++ b/shoot.html
@@ -15,7 +15,8 @@
         <b id="tower">Tower: </b><br>
         <b id="price">Price: </b><br>
         <b id="range">Range: </b><br>
-        <b id="damage">Damage: </b>
+        <b id="damage">Damage: </b><br>
+        <button type="button" id="sell">Sell</button>
     </div>
 
     <style>
@@ -70,6 +71,7 @@
             position: absolute;
             top: 218px;
             left: 925px;
+            color: green;
         }
         #towerInfo
         {
@@ -79,8 +81,14 @@
             display: none;
 
             width: 235px;
-            height: 72px;
+            height: 100px;
             border: 1px solid red;
+        }
+        #sell
+        {
+            position: absolute;
+            top: 75px;
+            left: 4px;
         }
     </style>
     <script src = "map.js"></script>
