--- a/shoot.html
+++ b/shoot.html
@@ -10,6 +10,7 @@
     <b id="wave">Wave: 1</b>
     <b id="nextWave">Next Wave In: 0</b>
     <b id="lives">Lives: 10</b>
+    <b id="remaining">Remaining Enemies: 25</b>
 
     <div id="towerInfo">
         <b id="tower">Tower: </b><br>
@@ -69,14 +70,20 @@
         #lives
         {
             position: absolute;
-            top: 218px;
+            top: 248px;
             left: 925px;
             color: green;
+        }
+        #remaining
+        {
+            position: absolute;
+            top: 218px;
+            left: 925px;
         }
         #towerInfo
         {
             position: absolute;
-            top: 248px;
+            top: 278px;
             left: 925px;
             display: none;
 
