--- a/shoot.html
+++ b/shoot.html
@@ -24,67 +24,70 @@
         #gameCanvas
         {
             border: 1px solid red;
+            position: absolute;
+            left: 150px;
+            top: 150px;
         }
         #start
         {
             position: absolute;
-            top: 8px;
-            left: 925px;
+            top: 150px;
+            left: 50px;
         }
         #pause
         {
             position: absolute;
-            top: 38px;
-            left: 925px;
+            top: 180px;
+            left: 50px;
         }
         #towerOne
         {
             position: absolute;
-            top: 68px;
-            left: 925px;
+            top: 210px;
+            left: 50px;
         }
         #towerTwo
         {
             position: absolute;
-            top: 98px;
-            left: 925px;
+            top: 240px;
+            left: 50px;
         }
         #money
         {
             position: absolute;
-            top: 128px;
-            left: 925px;
+            top: 150px;
+            left: 1100px;
         }
         #wave
         {
             position: absolute;
-            top: 158px;
-            left: 925px;
+            top: 180px;
+            left: 1100px;
         }
         #nextWave
         {
             position: absolute;
-            top: 188px;
-            left: 925px;
+            top: 210px;
+            left: 1100px;
         }
         #lives
         {
             position: absolute;
-            top: 248px;
-            left: 925px;
+            top: 270px;
+            left: 1100px;
             color: green;
         }
         #remaining
         {
             position: absolute;
-            top: 218px;
-            left: 925px;
+            top: 240px;
+            left: 1100px;
         }
         #towerInfo
         {
             position: absolute;
-            top: 278px;
-            left: 925px;
+            top: 300px;
+            left: 1100px;
             display: none;
 
             width: 235px;
