added ugly banner

--- a/shoot.html
+++ b/shoot.html
@@ -20,7 +20,26 @@
         <button type="button" id="sell">Sell</button>
     </div>
 
+    <div id="banner">
+        <b>TOWER DEFENSE</b>
+    </div>
+
     <style>
+        #banner
+        {
+            position: absolute;
+            width: 1300px;
+            height: 100px;
+
+            border: 10px solid blue;
+            border-radius: 5px;
+            background-color: aqua;
+            display: block;
+
+            text-align: center;
+            font-size: 50px;
+            margin-left: auto;
+        }
         #gameCanvas
         {
             border: 1px solid red;
@@ -30,30 +49,51 @@
         }
         #start
         {
+            text-align: center;
+            background-color:aqua;
+            font-size: 15px;
+            border-radius: 5px;
+            padding: 10px;
             position: absolute;
             top: 150px;
-            left: 50px;
+            left: 35px;
         }
         #pause
         {
+            text-align: center;
+            background-color:aqua;
+            font-size: 15px;
+            border-radius: 5px;
+            padding: 10px;
             position: absolute;
-            top: 180px;
-            left: 50px;
+            top: 200px;
+            left: 35px;
         }
         #towerOne
         {
+            text-align: center;
+            background-color:aqua;
+            font-size: 15px;
+            border-radius: 5px;
+            padding: 10px;
             position: absolute;
-            top: 210px;
-            left: 50px;
+            top: 250px;
+            left: 35px;
         }
         #towerTwo
         {
+            text-align: center;
+            background-color:aqua;
+            font-size: 15px;
+            border-radius: 5px;
+            padding: 10px;
             position: absolute;
-            top: 240px;
-            left: 50px;
+            top: 300px;
+            left: 35px;
         }
         #money
         {
+            font-size: 20px;
             position: absolute;
             top: 150px;
             left: 1100px;
@@ -93,6 +133,7 @@
             width: 235px;
             height: 100px;
             border: 1px solid red;
+            border-radius: 10px;
         }
         #sell
         {
