--- a/shoot.html
+++ b/shoot.html
@@ -1,16 +1,20 @@
 <html>
     <canvas id = "gameCanvas" height = 450 width = 900></canvas>
 
-    <button type="button" id="start">Start</button>
-    <button type="button" id="pause">Pause</button>
-    <button type="button" id="towerOne">Tower One</button>
-    <button type="button" id="towerTwo">Tower Two</button>
+    <div id="leftBanner">
+        <button type="button" id="start">Start</button>
+        <button type="button" id="pause">Pause</button>
+        <button type="button" id="towerOne">Tower One</button>
+        <button type="button" id="towerTwo">Tower Two</button>
+    </div> 
 
-    <b id="money">Money: $1000</b>
-    <b id="wave">Wave: 1</b>
-    <b id="nextWave">Next Wave In: 0</b>
-    <b id="lives">Lives: 10</b>
-    <b id="remaining">Remaining Enemies: 25</b>
+    <div id="gameInfo">
+        <b id="money">Money: $1000</b><br>
+        <b id="wave">Wave: 1</b><br>
+        <b id="nextWave">Next Wave In: 0</b><br>
+        <b id="lives">Lives: 10</b><br>
+        <b id="remaining">Remaining Enemies: 25</b>
+    </div>
 
     <div id="towerInfo">
         <b id="tower">Tower: </b><br>
@@ -20,11 +24,53 @@
         <button type="button" id="sell">Sell</button>
     </div>
 
+
     <div id="banner">
         <b>TOWER DEFENSE</b>
     </div>
 
+    <div id="rightBanner"></div>
+
+    
     <style>
+        body
+        {
+            background-color: darkgray;
+        }
+        #leftBanner
+        {
+            position: absolute;
+            width: 130px;
+            height: 600px;
+
+            border: 5px solid rgb(28, 236, 108);
+            border-radius: 5px;
+            background-color: aqua;
+            display: block;
+
+            text-align: center;
+            font-size: 50px;
+            margin-left: auto;
+        }
+        #rightBanner
+        {
+            position: absolute;
+            width: 280px;
+            height: 600px;
+
+            border: 5px solid  rgb(28, 236, 108);
+            border-radius: 5px;
+            background-color: aqua;
+            display: block;
+
+            text-align: center;
+            font-size: 50px;
+            margin-left: auto;
+            left: 1052px;
+            top: 130px;
+
+            z-index: 0;
+        }
         #banner
         {
             position: absolute;
@@ -56,7 +102,7 @@
             padding: 10px;
             position: absolute;
             top: 150px;
-            left: 35px;
+            left: 25px;
         }
         #pause
         {
@@ -67,7 +113,7 @@
             padding: 10px;
             position: absolute;
             top: 200px;
-            left: 35px;
+            left: 25px;
         }
         #towerOne
         {
@@ -78,7 +124,7 @@
             padding: 10px;
             position: absolute;
             top: 250px;
-            left: 35px;
+            left: 25px;
         }
         #towerTwo
         {
@@ -89,39 +135,22 @@
             padding: 10px;
             position: absolute;
             top: 300px;
-            left: 35px;
+            left: 25px;
         }
-        #money
+        #gameInfo
         {
-            font-size: 20px;
             position: absolute;
             top: 150px;
             left: 1100px;
-        }
-        #wave
-        {
-            position: absolute;
-            top: 180px;
-            left: 1100px;
-        }
-        #nextWave
-        {
-            position: absolute;
-            top: 210px;
-            left: 1100px;
-        }
-        #lives
-        {
-            position: absolute;
-            top: 270px;
-            left: 1100px;
-            color: green;
-        }
-        #remaining
-        {
-            position: absolute;
-            top: 240px;
-            left: 1100px;
+            display: block;
+
+            width: 135px;
+            height: 125px;
+            border: 1px solid red;
+            border-radius: 10px;  
+
+            text-align: center;
+            z-index: 1;
         }
         #towerInfo
         {
@@ -134,6 +163,8 @@
             height: 100px;
             border: 1px solid red;
             border-radius: 10px;
+
+            z-index: 1;
         }
         #sell
         {
@@ -142,6 +173,7 @@
             left: 4px;
         }
     </style>
+    
     <script src = "map.js"></script>
     <script src = "enemy.js"></script>
     <script src = "bullet.js"></script>
