--- a/shoot.html
+++ b/shoot.html
@@ -96,7 +96,7 @@
         #start
         {
             text-align: center;
-            background-color:aqua;
+            background-color: grey;
             font-size: 15px;
             border-radius: 5px;
             padding: 10px;
@@ -107,7 +107,7 @@
         #pause
         {
             text-align: center;
-            background-color:aqua;
+            background-color: grey;
             font-size: 15px;
             border-radius: 5px;
             padding: 10px;
@@ -118,7 +118,7 @@
         #towerOne
         {
             text-align: center;
-            background-color:aqua;
+            background-color: blue;
             font-size: 15px;
             border-radius: 5px;
             padding: 10px;
@@ -129,7 +129,7 @@
         #towerTwo
         {
             text-align: center;
-            background-color:aqua;
+            background-color: yellow;
             font-size: 15px;
             border-radius: 5px;
             padding: 10px;
