Updated tower 1 color

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
         #towerOne
         {
             text-align: center;
-            background-color: blue;
+            background-color: lightskyblue;
             font-size: 15px;
             border-radius: 5px;
             padding: 10px;
